# ProgLin

./: README.md  __init__.py  linprog.py  pyproject.toml
