[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "linpro"
version = "0.1.0"
description = "Linear Programming Solver and Sensitivity Analysis Toolkit"
readme = "README.md"
requires-python = ">=3.9"

authors = [
    {name = "Your Name"}
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11"
]

keywords = [
    "linear programming",
    "optimization",
    "operations research",
    "lp",
    "sensitivity analysis"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/martinWANG2014/ProgLin"
